5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4358/executions/1793_3136.log
== SUBMITION (2019-05-30 19:12:29) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor:")))
h=0
m=0
while(size(x)>h):
	m=m+(x[h]**0,166666)
	h=h+1
m=(m/size(x))
m=(m**6)
print(round(m,2))
	
-- EXECUTION TIME:
0.453203
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3136/main.py", line 6, in <module>
    m=m+(x[h]**0,166666)
TypeError: unsupported operand type(s) for +: 'int' and 'tuple'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:13:21) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor:")))
h=0
m=0
while(size(x)>h):
	m=m+(x[h]**0,166666)
	h=h+1
m=(m/size(x))
m=(m**6)
print(round(m,2))
	
-- EXECUTION TIME:
0.439269
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3136/main.py", line 6, in <module>
    m=m+(x[h]**0,166666)
TypeError: unsupported operand type(s) for +: 'int' and 'tuple'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:13:23) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor:")))
h=0
m=0
while(size(x)>h):
	m=m+(x[h]**0,166666)
	h=h+1
m=(m/size(x))
m=(m**6)
print(round(m,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:14:45) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor:")))
h=0
m=0
while(size(x)>h):
	m=m+(x[h]**0,166666)
	h=h+1
m=(m/size(x))
m=(m**6)
print(round(m,2))
	
-- EXECUTION TIME:
0.342953
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3136/main.py", line 6, in <module>
    m=m+(x[h]**0,166666)
TypeError: unsupported operand type(s) for +: 'int' and 'tuple'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:14:53) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor:")))
h=0
m=0
while(size(x)>h):
	m=m+(x[h]**0,166666)
	h=h+1
m=(m/size(x))
m=(m**6)
print(round(m,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:18:32) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor:")))
h=0
m=0
while(size(x)>h):
	m=m+(log(x[h]+1)
	h=h+1
m=(m/size(x))
m=(m**6)
print(round(m,2))
	
-- EXECUTION TIME:
0.218786
-- ERROR:
  File "/home/codebench/codes/1793/3136/main.py", line 7
    h=h+1
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:18:46) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor:")))
h=0
m=0
while(size(x)>h):
	m=m+(log(x[h]+1)
	h=h+1
m=(m/size(x))
m=(m**2)
print(round(m,2))
	
-- EXECUTION TIME:
0.138947
-- ERROR:
  File "/home/codebench/codes/1793/3136/main.py", line 7
    h=h+1
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:18:50) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor:")))
h=0
m=0
while(size(x)>h):
	m=m+(log(x[h]+1)
	h=h+1
m=(m/size(x))
m=(m**2)
print(round(m,2))
	
-- EXECUTION TIME:
0.128854
-- ERROR:
  File "/home/codebench/codes/1793/3136/main.py", line 7
    h=h+1
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:19:51) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor:")))
h=0
m=0
while(size(x)>h):
	m=m+(log(x[h]+1)
	h=h+1
m=(m/size(x))
m=(exp(m)-1)
print(round(m,2))
	
-- EXECUTION TIME:
0.18663
-- ERROR:
  File "/home/codebench/codes/1793/3136/main.py", line 7
    h=h+1
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:20:04) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor:")))
h=0
m=0
while(size(x)>h):
	m=m+(log(x[h]+1)
	h=h+1
m=(m/size(x))
m=(exp(m)-1)
print(round(m,2))
	
-- ERROR:
File "XXXX", line 7
    h=h+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:20:15) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor:")))
h=0
m=0
while(size(x)>h):
	m=m+(log(x[h]+1))
	h=h+1
m=(m/size(x))
m=(exp(m)-1)
print(round(m,2))
	
-- EXECUTION TIME:
0.393498
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.53
---- user output:
4.53
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.44
---- user output:
3.44
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.84
---- user output:
2.84
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
